--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Blog Django Girls</title>
-    </head>
-    <body>
-        {% for post in posts %}
-            <div>
-                <p>publicado em: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
+{% extends 'blog/base.html' %}
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+           <div class="date">
+              <p>published: {{ post.published_date }}</p>
+           </div>
+           <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
                 <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
-    </body>
-</html>
+        </div>
+    {% endfor %}
+{% endblock %}
