--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,6 +4,9 @@
     <head>
         <title>Blog Django</title>
             <div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                {% endif %}
                 <h1><a href="/">Django Blog</a></h1>
             </div>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
